Updated Entity Models

--- a/SharpForum.App/Views/Categories/All.cshtml
+++ b/SharpForum.App/Views/Categories/All.cshtml
@@ -1,18 +1,18 @@
 ﻿@using SharpForum.Models.ViewModels
-@model IEnumerable<CategorySubCategoriesViewModel>
+@model IEnumerable<CategoryTopicsViewModel>
 
 @{
-    ViewBag.Title = "All Categories";
+    ViewBag.Title = "Home";
 }
 
 <!-- TODO -->
 
 <div class="list-group">
-    <a href="#" class="list-group-item active"><strong>Category Name</strong></a>
+    <div class="list-group-item list-group-item-info"><strong>Super Category Name</strong></div>
     <a href="#" class="list-group-item">
         <div class="row">
             <div class="col-sm-6">
-                <strong>Subcategory Name 1</strong>
+                <strong>Category Name 1</strong>
                 <br>
                 <small>Info about this subcategory. Details too.</small>
             </div>
@@ -26,7 +26,7 @@
     <a href="#" class="list-group-item">
         <div class="row">
             <div class="col-sm-6">
-                <strong>Subcategory Name 2</strong>
+                <strong>Category Name 2</strong>
                 <br>
                 <small>Info about this subcategory. Details too.</small>
             </div>
@@ -37,13 +37,11 @@
             </div>
         </div>
     </a>
-</div>
-<div class="list-group">
-    <a href="#" class="list-group-item active"><strong>Category Name</strong></a>
+    <div class="list-group-item list-group-item-info"><strong>Super Category Name 2</strong></div>
     <a href="#" class="list-group-item">
         <div class="row">
             <div class="col-sm-6">
-                <strong>Subcategory Name 3</strong>
+                <strong>Category Name 3</strong>
                 <br>
                 <small>Info about this subcategory. Details too.</small>
             </div>
@@ -57,7 +55,7 @@
     <a href="#" class="list-group-item">
         <div class="row">
             <div class="col-sm-6">
-                <strong>Subcategory Name 4</strong>
+                <strong>Category Name 4</strong>
                 <br>
                 <small>Info about this subcategory. Details too.</small>
             </div>
