--- a/SharpForum.App/Views/Categories/Category.cshtml
+++ b/SharpForum.App/Views/Categories/Category.cshtml
@@ -1,4 +1,4 @@
-﻿@model SharpForum.Models.ViewModels.CategorySubCategoriesViewModel
+﻿@model SharpForum.Models.ViewModels.CategoryTopicsViewModel
 
 @{
     ViewBag.Title = "Category";
