--- a/SharpForum.App/Views/Shared/_Layout.cshtml
+++ b/SharpForum.App/Views/Shared/_Layout.cshtml
@@ -50,9 +50,9 @@
     <!-- Content Goes Here -->
     <div class="container body-content">
         @RenderBody()
-        <hr />
+
         <footer>
-            <p class="text-muted">SharpForum 2017</p>
+            <p class="text-muted">Sharp<strong>Forum</strong> @DateTime.Now.Year<br /><small>Made by: Daniel<strong>Ignatov</strong></small></p>
         </footer>
     </div>
 
