--- a/SharpForum.App/Views/Categories/All.cshtml
+++ b/SharpForum.App/Views/Categories/All.cshtml
@@ -1,69 +1,34 @@
 ﻿@using SharpForum.Models.ViewModels
-@model IEnumerable<CategoryTopicsViewModel>
+@model IEnumerable<CategoryViewModel>
 
 @{
     ViewBag.Title = "Home";
 }
 
-<!-- TODO -->
-
 <div class="list-group">
-    <div class="list-group-item list-group-item-info"><strong>Super Category Name</strong></div>
-    <a href="#" class="list-group-item">
-        <div class="row">
-            <div class="col-sm-6">
-                <strong>Category Name 1</strong>
-                <br>
-                <small>Info about this subcategory. Details too.</small>
-            </div>
-            <div class="hidden-xs col-sm-6">
-                <small>13 topics</small>
-                <br>
-                <small>22 replies</small>
-            </div>
-        </div>
-    </a>
-    <a href="#" class="list-group-item">
-        <div class="row">
-            <div class="col-sm-6">
-                <strong>Category Name 2</strong>
-                <br>
-                <small>Info about this subcategory. Details too.</small>
-            </div>
-            <div class="hidden-xs col-sm-6">
-                <small>13 topics</small>
-                <br>
-                <small>22 replies</small>
-            </div>
-        </div>
-    </a>
-    <div class="list-group-item list-group-item-info"><strong>Super Category Name 2</strong></div>
-    <a href="#" class="list-group-item">
-        <div class="row">
-            <div class="col-sm-6">
-                <strong>Category Name 3</strong>
-                <br>
-                <small>Info about this subcategory. Details too.</small>
-            </div>
-            <div class="hidden-xs col-sm-6">
-                <small>13 topics</small>
-                <br>
-                <small>22 replies</small>
-            </div>
-        </div>
-    </a>
-    <a href="#" class="list-group-item">
-        <div class="row">
-            <div class="col-sm-6">
-                <strong>Category Name 4</strong>
-                <br>
-                <small>Info about this subcategory. Details too.</small>
-            </div>
-            <div class="hidden-xs col-sm-6">
-                <small>13 topics</small>
-                <br>
-                <small>22 replies</small>
-            </div>
-        </div>
-    </a>
+    @{ foreach (var category in Model)
+        {
+            if (category.IsSuperCategory == false)
+            {
+                <a href="/Category/@category.Id" class="list-group-item">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <strong>@category.Name</strong>
+                            <br>
+                            <small>@category.Description</small>
+                        </div>
+                        <div class="hidden-xs col-sm-6">
+                            <small>@category.TopicsCount topics</small>
+                            <br>
+                            <small>@category.RepliesCount replies</small>
+                        </div>
+                    </div>
+                </a>
+            }
+            else
+            {
+                <div class="list-group-item list-group-item-info"><strong>@category.Name</strong></div>
+            }
+        }
+    }
 </div>
