--- a/SharpForum.App/Views/Shared/_Layout.cshtml
+++ b/SharpForum.App/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">SharpForum</a>
+                    <a class="navbar-brand" href="#">SharpForum</a> <!-- TODO -->
                 </div>
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "All", "Categories")</li>
