--- a/SharpForum.Application/Views/Shared/_ModeratorTopicMenu.cshtml
+++ b/SharpForum.Application/Views/Shared/_ModeratorTopicMenu.cshtml
@@ -21,4 +21,4 @@ else
     <a href="/moderator/TopicModeration/stick/@Model.Topic.Id" title="Stick"><span class="glyphicon glyphicon-fire gi-0p8x"></span></a>
 }
 <!-- Delete Topic Button -->
-<a href="/moderator/TopicModeration/delete/@Model.Topic.Id"><span class="glyphicon glyphicon-trash gi-0p8x"></span></a>
+<a href="/moderator/TopicModeration/delete/@Model.Topic.CategoryId/@Model.Topic.Id"><span class="glyphicon glyphicon-trash gi-0p8x"></span></a>
