--- a/SharpForum.Application/Views/Shared/_ModeratorReplyMenu.cshtml
+++ b/SharpForum.Application/Views/Shared/_ModeratorReplyMenu.cshtml
@@ -1,4 +1,4 @@
 ﻿<!-- Edit Reply Button -->
-<a href="../Moderator/ReplyModeration/edit/@Model"><span class="glyphicon glyphicon-pencil gi-0p8x"></span></a>
+<a href="../Moderator/ReplyModeration/edit/@Model[0]"><span class="glyphicon glyphicon-pencil gi-0p8x"></span></a>
 <!-- Delete Reply Button -->
-<a href="../Moderator/ReplyModeration/delete/@Model"><span class="glyphicon glyphicon-trash gi-0p8x"></span></a>
+<a href="../Moderator/ReplyModeration/delete/@Model[1]/@Model[0]"><span class="glyphicon glyphicon-trash gi-0p8x"></span></a>
