--- a/SharpForum.Application/Views/Shared/_Layout.cshtml
+++ b/SharpForum.Application/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                         </ul>
                     </li>
                     @Html.Partial("_UserMenuPartial")
+                    @Html.Partial("_AdminMenuPartial")
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
