--- a/SharpForum.Application/Views/Category/All.cshtml
+++ b/SharpForum.Application/Views/Category/All.cshtml
@@ -1,4 +1,5 @@
-﻿@using SharpForum.Models.ViewModels
+﻿@using Microsoft.AspNet.Identity
+@using SharpForum.Models.ViewModels
 @model IEnumerable<CategoryViewModel>
 
 @{
