--- a/SharpForum.Application/Views/Shared/_UserMenuPartial.cshtml
+++ b/SharpForum.Application/Views/Shared/_UserMenuPartial.cshtml
@@ -4,10 +4,10 @@
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">My Profile<span class="caret"></span></a>
         <ul class="dropdown-menu">
-            <li>@Html.ActionLink("View Profile", "MyProfile", "User")</li>
-            <li>@Html.ActionLink("Edit Profile", "MyProfile", "Edit")</li>
-            <li>@Html.ActionLink("My Topics", "MyTopics", "Topic")</li>
-            <li>@Html.ActionLink("My Replies", "MyReplies", "Topic")</li>
+            <li>@Html.ActionLink("View Profile", "MyProfile", "User", new { Area = "" }, new { })</li>
+            <li>@Html.ActionLink("Edit Profile", "MyProfile", "Edit", new { Area = "" }, new { })</li>
+            <li>@Html.ActionLink("My Topics", "MyTopics", "Topic", new { Area = "" }, new { })</li>
+            <li>@Html.ActionLink("My Replies", "MyReplies", "Topic", new { Area = "" }, new { })</li>
         </ul>
     </li>
 }
