--- a/SharpForum.Application/Content/style/style.css
+++ b/SharpForum.Application/Content/style/style.css
@@ -9,3 +9,65 @@ body {
     float: none;
     margin: 0 auto;
 }
+
+/* Bootstrap overrides */
+.table-info,
+.table-info > th,
+.table-info > td {
+    background-color: #e2cfec;
+}
+
+.alert-info {
+    color: #502c61;
+    background-color: #ebddf1;
+    border-color: #e2cfec;
+}
+
+.list-group-item-info {
+    color: #502c61;
+    background-color: #e2cfec;
+}
+
+.list-group-item-info.list-group-item-action:hover, .list-group-item-info.list-group-item-action:focus {
+    color: #502c61;
+    background-color: #d7bde5;
+}
+
+.list-group-item-info.list-group-item-action.active {
+    color: #fff;
+    background-color: #502c61;
+    border-color: #502c61;
+}
+
+.list-group-item:first-child {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.list-group-item:last-child {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.form-control {
+    border-radius: 0;
+}
+
+.btn {
+    border-radius: 0;
+}
+
+.dropdown-menu {
+    border-radius: 0;
+}
+
+.btn-default {
+    border-color: #dbdbdb;
+    border-color: #ccc;
+}
+
+.btn-default:hover,
+.btn-default:focus {
+    background-color: #e0e0e0;
+    background-position: 0 -15px;
+}
