--- a/SharpForum.Application/Content/style/style.css
+++ b/SharpForum.Application/Content/style/style.css
@@ -21,3 +21,9 @@ body {
     background-color: #e0e0e0;
     background-position: 0 -15px;
 }
+
+#Priority {
+    width: 100%;
+    padding: 6px 12px;
+    border: 1px solid #ced4da;
+}
