--- a/sharpforum-web/src/index.scss
+++ b/sharpforum-web/src/index.scss
@@ -4,4 +4,13 @@ $theme-colors: ( "primary": mediumpurple, "danger": tomato, "success": #90EE90 )
     margin-bottom: 1rem;
 }
 
+.sf-link {
+    color: inherit;
+    text-decoration: underline;
+
+    &:hover {
+        color: mediumpurple;
+    }
+}
+
 @import "~bootstrap/scss/bootstrap";
