--- a/sharpforum-web/src/index.scss
+++ b/sharpforum-web/src/index.scss
@@ -13,4 +13,8 @@ $theme-colors: ( "primary": mediumpurple, "danger": tomato, "success": #90EE90 )
     }
 }
 
+body {
+    background-image: linear-gradient( 95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64% );
+}
+
 @import "~bootstrap/scss/bootstrap";
