--- a/sharpforum-web/src/index.scss
+++ b/sharpforum-web/src/index.scss
@@ -13,6 +13,19 @@ $theme-colors: ( "primary": mediumpurple, "danger": tomato, "success": #90EE90 )
     }
 }
 
+.sf-container {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    background-color: white;
+    border: 1px solid mediumpurple;
+}
+
+.sf-border {
+    background-color: white;
+    border: 1px solid mediumpurple;
+}
+
 body {
     background-image: linear-gradient( 95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64% );
 }
