--- a/sharpforum-web/src/index.scss
+++ b/sharpforum-web/src/index.scss
@@ -1,4 +1,14 @@
-$theme-colors: ( "primary": mediumpurple, "danger": tomato, "success": #90EE90 );
+// Override bootstrap color variables
+$primary: mediumpurple;
+$secondary: #6c757d;
+$success: #71C562;
+$info: #0dcaf0;
+$warning: #ffc107;
+$danger: tomato;
+$light: #f8f9fa;
+$dark: #212529;
+
+$theme-colors: ( primary: $primary, secondary: $secondary, success: $success, info: $info, warning: $warning, danger: $danger, light: $light, dark: $dark);
 
 .sf-mb-1 {
     margin-bottom: 1rem;
