--- a/sharpforum-web/src/index.scss
+++ b/sharpforum-web/src/index.scss
@@ -7,6 +7,12 @@ $warning: #ffc107;
 $danger: tomato;
 $light: #f8f9fa;
 $dark: #212529;
+
+// SharpForum palette
+$sfLight: #FFFFFF;
+$sfLightBorder: #F2F2F2;
+$sfPurple: mediumpurple;
+$sfPurpleText: #552B58;
 $purpleDragon: #C38EC7;
 
 $theme-colors: ( primary: $primary, secondary: $secondary, success: $success, info: $info, warning: $warning, danger: $danger, light: $light, dark: $dark);
@@ -20,7 +26,7 @@ $theme-colors: ( primary: $primary, secondary: $secondary, success: $success, in
     text-decoration: underline;
 
     &:hover {
-        color: mediumpurple;
+        color: $sfPurple;
     }
 }
 
@@ -29,16 +35,23 @@ $theme-colors: ( primary: $primary, secondary: $secondary, success: $success, in
     text-decoration: none;
 
     &:hover {
-        color: mediumpurple;
+        color: $sfPurple;
     }
 }
 
 .sf-header {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-    color: #552B58;
+    background-color: $sfLight;
+    border: 1px solid $sfLightBorder;
+}
+
+.sf-header-colored {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    color: $sfPurpleText;
     background-image: linear-gradient( 95.2deg, rgba(195, 142, 199, 1) 26.8%, rgba(215, 162, 219, 1) 64% );
-    border: 1px solid mediumpurple;
+    border: 1px solid $sfPurple;
 }
 
 .sf-container {
@@ -46,12 +59,12 @@ $theme-colors: ( primary: $primary, secondary: $secondary, success: $success, in
     padding-bottom: 1rem;
     margin-bottom: 1rem;
     background-color: white;
-    border: 1px solid mediumpurple;
+    border: 1px solid $sfPurple;
 }
 
 .sf-border {
     background-color: white;
-    border: 1px solid mediumpurple;
+    border: 1px solid $sfPurple;
 }
 
 body {
