--- a/sharpforum-web/src/index.scss
+++ b/sharpforum-web/src/index.scss
@@ -62,9 +62,21 @@ $theme-colors: ( primary: $primary, secondary: $secondary, success: $success, in
     border: 1px solid $sfPurple;
 }
 
+.sf-container-light {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    background-color: white;
+    border: 1px solid $sfLightBorder;
+}
+
 .sf-border {
     background-color: white;
     border: 1px solid $sfPurple;
+}
+
+.sf-bg {
+    background-image: linear-gradient( 95.2deg, rgba(195, 142, 199, 1) 26.8%, rgba(215, 162, 219, 1) 64% );
 }
 
 body {
