--- a/sharpforum-web/src/index.scss
+++ b/sharpforum-web/src/index.scss
@@ -75,7 +75,15 @@ $theme-colors: ( primary: $primary, secondary: $secondary, success: $success, in
     border: 1px solid $sfPurple;
 }
 
-.sf-bg {
+.sf-text-colored {
+    color: $sfPurpleText;
+}
+
+.sf-border-colored {
+    border: 1px solid $sfPurple;
+}
+
+.sf-bg-colored {
     background-image: linear-gradient( 95.2deg, rgba(195, 142, 199, 1) 26.8%, rgba(215, 162, 219, 1) 64% );
 }
 
